# customer-retention-system

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUDIT_REPORT.md  DATA_PIPELINE.md  DATA_PIPELINE_TESTED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCUMENTATION_AUDIT.md  EXECUTION_STATUS.md  FINAL_AUDIT_AND_EXECUTION_PLAN.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  LOGIC_HOLES_AUDIT.md  Makefile  PROJECT_HIGHLIGHTS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_COMPLETE.txt  TRAINING_PLAYBOOK.md  pyproject.toml  rules.yaml  validate_setup.sh
agents/: __init__.py  lagrangian.py  ppo_policy.py
agents/baselines/: __init__.py  propensity_threshold.py  ts_bandit.py  uplift_tree.py
data/: README.md  __init__.py  catalog.yaml  catalog_manager.py
data/processed/bank_marketing/: bank.parquet  bank_test.parquet  bank_train.parquet  bank_valid.parquet  stats.json
data/processed/oasst1/: sft_valid.jsonl
data/processed/preferences/: hh_probe.jsonl
data/processed/telco/: stats.json  telco.parquet  telco_test.parquet  telco_train.parquet  telco_valid.parquet
data/processors/: __init__.py  bank_processor.py  oasst1_processor.py  preferences_processor.py  telco_processor.py
env/: retention_env.py
eval/: __init__.py  arena_ab.py  business_metrics.py  plots.py  stress_tests.py
models/: __init__.py
models/risk_accept/: __init__.py  calibrate.py  train_accept.py  train_churn.py
ops/: cloudbuild.yaml  cloudbuild_trainer.yaml
ops/configs/: data_config.yaml  env.yaml  experiment_exp_001_mvp.yaml  ppo.yaml  ppo_text.yaml  rm.yaml  serve.yaml  sft.yaml
ops/docker/: Dockerfile.app  Dockerfile.trainer
ops/scripts/: evaluate_results.sh  prepare_data_local.py  run_complete_pipeline.sh  setup_gcp_infrastructure.sh  submit_training_jobs.sh  upload_data_to_gcs.sh  upload_to_gcs.py
ops/terraform/: artifact_registry.tf  buckets.tf  cloud_run.tf  iam.tf  main.tf  monitoring.tf  outputs.tf  provider.tf  secret_manager.tf  terraform.tfvars.example  variables.tf
rlhf/: __init__.py  ppo_text.py  rm_train.py  sft_train.py  utils.py
rlhf/safety/: __init__.py  rules.yaml  shield.py
serve/: app.py  healthchecks.py  policy_loader.py
tests/: test_training_offline.py
tests/contract/: test_policy_golden.py
tests/e2e/: test_docker_smoke.py
tests/fixtures/: tiny_bank.csv  tiny_pairs.jsonl  tiny_telco.csv
tests/integration/: test_api_retain.py  test_env_step.py  test_gcs_loading.py  test_ppo_rollout.py
tests/unit/: test_bt_loss.py  test_constraints.py  test_kl_adapt.py  test_lagrangian.py  test_rewards.py  test_safety_rules.py
